# price-monitor-gangapp

./: .gitignore
backend/: pyproject.toml
backend/scrapers/: scrapy.cfg
backend/scrapers/price_scrapers/: items.py  middlewares.py  pipelines.py  settings.py
backend/scrapers/price_scrapers/spiders/: mercadolibre_spider.py
